--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "firebase-admin": "^13.0.1",
+    "mapbox-gl": "^3.8.0",
     "nodemon": "^3.1.7"
   }
 }
