D_8th Commit - Added: different style on larger reso in settings and manage device on Monitor Component
Issue: Manage device are currently fix in one position(Larger reso)

--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.18.1",
     "firebase-admin": "^13.0.1",
     "mapbox-gl": "^3.8.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "react-color": "^2.19.3"
   }
 }
