--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/trackmoto",
   "dependencies": {
     "@icons/material": "^0.4.1",
     "@testing-library/jest-dom": "^5.17.0",
