--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,10 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "firebase": "^11.1.0",
     "firebase-admin": "^13.0.1",
     "mapbox-gl": "^3.8.0",
     "multer": "^1.4.5-lts.1",
