--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
+    "firebase": "^11.1.0",
     "mapbox-gl": "^3.8.0",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
