--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@icons/material": "^0.4.1",
+    "@sendgrid/mail": "^8.1.4",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "firebase-admin": "^13.0.1",
     "mapbox-gl": "^3.8.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "react-color": "^2.19.3"
   }
