--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@turf/turf": "^7.2.0",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "mapbox-gl": "^3.8.0",
