--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "firebase-admin": "^13.0.1",
     "mapbox-gl": "^3.8.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "react-color": "^2.19.3",
